image floating correction and CSS color shifts

--- a/css/css.css
+++ b/css/css.css
@@ -17,9 +17,8 @@ body {
   }
 
   img {
-    float: right;
     text-emphasis: wrap;
-    border: 5px solid #ff008e;
+    border: 5px solid #ff7300;
     margin: 10px;
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
@@ -27,7 +26,7 @@ body {
 
   h1 {
     font-family: 'Pacifico', cursive;
-    color: black;
+    color: #000000;
     background-color: #00b37d;
     outline-width: 1px;
     outline-color: black;
@@ -36,7 +35,7 @@ body {
   }
 
   h2 {
-    color:  rgb(255, 115, 0);
+    color:  #ff7300;
     text-align: center;
     text-shadow: 1px 1px 1px black;
   }
@@ -53,11 +52,11 @@ body {
 
 a:link {color: #00b37d;}
 
-a:visited {color: #ff7300;}
+a:visited {color: #ff008e;}
 
-a:hover {color: #ff008e;}
+a:hover {color: #ff7300;}
 
-a:active {color: #ff008e;}
+a:active {color: #00ff33;}
 
 table, th, td, tr {
   width: 100%;
@@ -78,7 +77,7 @@ tr:nth-child(even) {
   background-color: white;
 }
 
-tr:hover {background-color: rgb(255, 115, 0)}
+tr:hover {background-color: #ff008e}
 
 div.buttons {
   background-color:rgb(255, 115, 0);
@@ -156,6 +155,7 @@ footer {
   -webkit-column-span: all;
   -moz-column-span: all;
   column-span: all;
+  column-span: all;
 }
 
 .b1 {
@@ -172,7 +172,7 @@ footer {
 }
 
 .layout {
-  width: 600px;
+  width: 50%;
   height: auto;
   margin: 0 auto;
   background-color: rgb(228, 228, 228);
